examples/http-protocol-versions/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000

static_resources:
  listeners:
  - name: http11_server
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - transport_socket:
        name: envoy.transport_socket.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            alpn_protocols: ["http/1.1"]
            tls_certificates:
            - certificate_chain:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIIDDTCCAfWgAwIBAgIUQ+BbsQhrJnksmVctCmoGSAzZyVkwDQYJKoZIhvcNAQEL
[...]
                  h5MSMfwSHPRnv2jxQdXVm/w=
                  -----END CERTIFICATE-----
              private_key:
                inline_string: |
                  -----BEGIN PRIVATE KEY-----
                  MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQCt5ARL3DV09xBV
[...]
                  L6tQDA8M5JPPctM27Dl8Qg==
                  -----END PRIVATE KEY-----

      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: HTTP1
          stat_prefix: http11_proxy
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: test_route
            virtual_hosts:
            - name: google_service
              domains: ["*"]
              routes:
              - match: { prefix: "/http11" }
                route:
                  host_rewrite_literal: quic.aiortc.org
                  prefix_rewrite: "/"
                  cluster: google_http11
              - match: { prefix: "/http2" }
                route:
                  host_rewrite_literal: quic.aiortc.org
                  prefix_rewrite: "/"
                  cluster: google_http2
              - match: { prefix: "/http3" }
                route:
                  host_rewrite_literal: quic.aiortc.org
                  prefix_rewrite: "/"
                  cluster: google_http3

  - name: http2_server
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10001
    filter_chains:
    - transport_socket:
        name: envoy.transport_socket.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            alpn_protocols: ["h2"]
            tls_certificates:
            - certificate_chain:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIIDDTCCAfWgAwIBAgIUQ+BbsQhrJnksmVctCmoGSAzZyVkwDQYJKoZIhvcNAQEL
[...]
                  h5MSMfwSHPRnv2jxQdXVm/w=
                  -----END CERTIFICATE-----
              private_key:
                inline_string: |
                  -----BEGIN PRIVATE KEY-----
                  MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQCt5ARL3DV09xBV
[...]
                  L6tQDA8M5JPPctM27Dl8Qg==
                  -----END PRIVATE KEY-----
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: HTTP2
          stat_prefix: http2_proxy
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: test_route
            virtual_hosts:
            - name: google_service
              domains: ["*"]
              routes:
              - match: { prefix: "/http11" }
                route:
                  host_rewrite_literal: quic.aiortc.org
                  prefix_rewrite: "/"
                  cluster: google_http11
              - match: { prefix: "/http2" }
                route:
                  host_rewrite_literal: quic.aiortc.org
                  prefix_rewrite: "/"
                  cluster: google_http2
              - match: { prefix: "/http3" }
                route:
                  host_rewrite_literal: quic.aiortc.org
                  prefix_rewrite: "/"
                  cluster: google_http3

  - name: http3_server
    address:
      socket_address:
        protocol: UDP
        address: 0.0.0.0
        port_value: 10002
    udp_listener_config:
      quic_options: {}
      downstream_socket_config:
        prefer_gro: true
    filter_chains:
    - transport_socket:
        name: envoy.transport_sockets.quic
        typed_config:
          "@type":  type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport
          downstream_tls_context:
            common_tls_context:
              alpn_protocols: ["h3"]
              tls_certificates:
              - certificate_chain:
                  inline_string: |
                    -----BEGIN CERTIFICATE-----
                    MIIDDTCCAfWgAwIBAgIUQ+BbsQhrJnksmVctCmoGSAzZyVkwDQYJKoZIhvcNAQEL
[...]
                    h5MSMfwSHPRnv2jxQdXVm/w=
                    -----END CERTIFICATE-----
                private_key:
                  inline_string: |
                    -----BEGIN PRIVATE KEY-----
                    MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQCt5ARL3DV09xBV
[...]
                    L6tQDA8M5JPPctM27Dl8Qg==
                    -----END PRIVATE KEY-----
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: HTTP3
          http3_protocol_options: {}
          http_filters:
          - name: envoy.filters.http.router
          stat_prefix: http3_proxy
          route_config:
            name: test_route
            virtual_hosts:
            - name: google_service
              domains: ["*"]
              routes:
              - match: { prefix: "/http11" }
                route:
                  host_rewrite_literal: quic.aiortc.org
                  prefix_rewrite: "/"
                  cluster: google_http11
              - match: { prefix: "/http2" }
                route:
                  host_rewrite_literal: quic.aiortc.org
                  prefix_rewrite: "/"
                  cluster: google_http2
              - match: { prefix: "/http3" }
                route:
                  host_rewrite_literal: quic.aiortc.org
                  prefix_rewrite: "/"
                  cluster: google_http3

  clusters:
  - name: google_http11
    connect_timeout: 5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: google_http11
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: quic.aiortc.org
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: quic.aiortc.org
        common_tls_context:
          alpn_protocols: ["http/1.1"]
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http_protocol_options: {}

  - name: google_http2
    connect_timeout: 5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: google_http2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: quic.aiortc.org
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: quic.aiortc.org
        common_tls_context:
          alpn_protocols: ["h2"]
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}

  - name: google_http3
    connect_timeout: 5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: google_http3
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: quic.aiortc.org
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.quic
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicUpstreamTransport
        upstream_tls_context:
          sni: quic.aiortc.org
          common_tls_context:
            alpn_protocols: ["h3"]
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http3_protocol_options: {}
